--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
     
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link">お問い合わせ</a></li>
+        <li class="nav-item"><%= link_to 'お問い合わせ', new_contact_path, class: 'nav-link' %></li>
         <li class="nav-item"><a href="#" class="nav-link">新規登録</a></li>
         <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
       </ul>
