--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="new_user mt-4 text-center">
-  <button type="button" class="btn btn-primary btn-lg">新規登録</button>
+  <%= link_to '新規登録', singup_path, class: 'btn btn-lg btn-primary' %>
 </div>
 <div class="content mt-4">
   <h2>会員登録で....</h2>
