--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,15 @@
     
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><%= link_to 'お問い合わせ', new_contact_path, class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to '新規登録', singup_path, class: 'nav-link' %></li>
-        <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to 'お問い合わせ', new_contact_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Myページ', user_path(current_user), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+        <% else %>
+          <li class="nav-item"><%= link_to 'お問い合わせ', new_contact_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to '新規登録', singup_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'ログイン', login_path, class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
