--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <%= render "layouts/navbar" %>
     
-    
+    <%= render 'layouts/flash_messages' %>
     
     <%= yield %>
     
