--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-sm navbar-light" style="background-color:#fffacd;">
-    <a class="navbar-brand" href="/">Miyazaki(仮)</a>
+    <a class="navbar-brand" href="/"><img src="/assets/hinatalogo.jpg" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
