--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,42 +1,65 @@
-<div class="container">
+<div class="useredit container">
   <div class="mt-4">
     <h2><%= @user.name %> さんのユーザ情報編集</h2>
   </div>
-  
-  <div class="usersave col-sm-6 offset-sm-3">
-  <%= form_with(model: @user, local: true) do |f| %>
-    <%= render 'layouts/error_messages', model: f.object %>
-
-    <% if @user.errors.any? %>
-      <div id="error_explanation">
-        <ul>
-          <% @user.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
+  <hr>
+  <div class="row justify-content-around">
+    <div class="col-xs-12 col-sm-12 col-md-4">
+      <div class="text-center">
+        <% if @user.user_image? %>
+        <%= image_tag @user.user_image.thumb.url, :size => "300x300" %>
+      <% else %>
+        <%= image_tag "/assets/akazukin.png", :size => "300x300" %>
+      <% end %>
       </div>
-    <% end %>
-  
-    <div class="form-group">
-      <%= f.label :name, "ニックネーム" %>
-      <%= f.text_field :name, class: 'form-control' %>
     </div>
+  
+    <div class="usersave col-xs-12 col-sm-12 col-md-6 col-offset-3">
+      <%= form_with(model: @user, local: true) do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
+
+        <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <ul>
+              <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+  
+        <div class="form-group">
+          <%= f.label :name, "ニックネーム" %>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
     
-    <div class="form-group">
-      <%= f.label :email, "メールアドレス" %>
-      <%= f.email_field :email, class: 'form-control' %>
-    </div>
+        <div class="form-group">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, class: 'form-control' %>
+        </div>
   
-    <div class="form-group">
-      <%= f.label :password, "パスワード" %>
-      <%= f.password_field :password, class: 'form-control' %>
-    </div>
+        <div class="form-group">
+          <%= f.label :password, "パスワード" %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
   
-    <div class="form-group">
-      <%= f.label :password_confirmation, "パスワード確認" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <div class="form-group">
+          <%= f.label :password_confirmation, "パスワード確認" %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+    
+        <div class="form-group">
+          <%= f.label :user_image, "プロフィール写真" %>
+          <%= f.file_field :user_image, class: 'form-control' %>
+        </div>
+        <div class="field">
+          <% if @user.persisted? && @user.user_image? %>
+            <label><%= f.check_box :remove_user_image %>現在のプロフィール画像を削除</label>
+          <% end %>
+        </div>
+    
+        <%= f.submit "更新する", class: 'btn updatebt btn-sm' %>
+      <% end %>
     </div>
-      
-    <%= f.submit "更新する", class: 'btn btn-primary btn-block' %>
-  <% end %>
+  </div>
 </div>
