--- a/app/assets/stylesheets/toppage.scss
+++ b/app/assets/stylesheets/toppage.scss
@@ -5,17 +5,112 @@ html, body {
   color: #000;
 }
 
+.navbar {
+  
+}
+
+.navbar img {
+  height: 75px;
+  padding: 0;
+  
+}
+.navbar-nav li {
+  padding-right: 20px;
+}
+.nav-link {
+  font-size: 20px !important;
+  font-family: "M PLUS Rounded 1c";
+}
 
 
 .carousel-inner img {
   width: 100%;
   height: 100%;
   max-height: 600px;
+  object-fit: cover;
 }
 
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #ff870f;
+  font-family: 'Luckiest Guy';
+}
+.carousel-caption h1 {
+  text-transform: uppercase;
+  text-shadow: 1px 1px 20px #000;
+  font-size: 100px;
+  letter-spacing: 20px;
+}
+.carousel-caption h2 {
+  font-weight: 50px;
+  text-shadow: 1px 1px 20px #000;
+  padding-bottom: 1rem;
+  font-size: 80px;
+  letter-spacing: 5px;
+}
+
+.carousel-control-next, .carousel-control-prev {
+  width: 2%;
+  background-color: #000;
+}
+
+.join {
+  background-color: #fffacd;
+}
+
+hr {
+  border-top: 2px solid #b4b4b4;
+  width: 95%;
+  margin-top: .3px;
+  margin-top: 1px;
+  padding-bottom: 10px;
+}
+.area hr {
+  width: 50%;
+  border-top: 5px solid #ffff56;
+} 
+
+.btn {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  
+  color: #FFF;
+  border-bottom: solid 4px #627295;
+  border-radius: 3px;
+  font-family: "M PLUS Rounded 1c";
+}
+.btn:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: none;
+}
+.joinbt {
+  margin: 30px;
+}
+.mybt {
+  margin: 30px;
+}
+
+.banner p {
+  padding-bottom: 20px;
+}
+
+.join h2 {
+  font-size: 40px;
+  font-family: "Nico Moji";
+  color: #20b2aa;
+}
+.join li {
+  font-size: 25px;
+  margin-left: 20px;
+}
 
 .area {
-  padding: 50px;
+  padding: 30px;
 }
 .area img{
   border-radius: 50%;
@@ -23,15 +118,10 @@ html, body {
   height: 300px;
 }
 
-.area1 {
+.area {
   position: relative;
 }
-.area2 {
-  position: relative;
-}
-.area3 {
-  position: relative;
-}
+
 .area p {
   position: absolute;
   width: 100%;
@@ -42,3 +132,30 @@ html, body {
   font-weight: bold; 
   line-height: 50px;
 }
+
+
+@media (max-width: 768px) {
+  .carousel-caption {
+    top: 50%
+  }
+  .carousel-caption h1 {
+    font-size: 100px;
+  }
+  .carousel-caption h2 {
+    font-size: 80px;
+    padding-bottom: .2rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .carousel-caption {
+    top: 50%
+  }
+  .carousel-caption h1 {
+    font-size: 80px;
+  }
+  .carousel-caption h2 {
+    font-size: 60px;
+  }
+}
+
