--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,43 +1,46 @@
-<div class="text-center mt-4">
-  <h1>お問い合わせ</h1>
-</div>
+<div class="container contact">
+  <div class="text-center mt-4">
+    <h1>お問い合わせ</h1>
+  </div>
 
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
-    <%= form_with(model: @contact, local: true) do |f| %>
+  <div class="row form">
+    <div class="col-sm-6 offset-sm-3">
+      <%= form_with(model: @contact, local: true) do |f| %>
 
-      <% if @contact.errors.any? %>
-        <div id="error_explanation">
-          <ul>
-            <% @contact.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-          </ul>
+        <% if @contact.errors.any? %>
+          <div id="error_explanation">
+            <ul>
+              <% @contact.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+  
+  
+        <div class="form-group">
+          <%= f.label :name, "名前" %>
+          <%= f.text_field :name, class: 'form-control' %>
         </div>
-      <% end %>
   
+        <div class="form-group">
+          <%= f.label :email, "メールアドレス" %>
+          <%= f.email_field :email, class: 'form-control' %>
+        </div>
   
-      <div class="form-group">
-        <%= f.label :name, "名前" %>
-        <%= f.text_field :name, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :title, "タイトル" %>
+          <%= f.text_field :title, class: 'form-control' %>
+        </div>
   
-      <div class="form-group">
-        <%= f.label :email, "メールアドレス" %>
-        <%= f.email_field :email, class: 'form-control' %>
-      </div>
-  
-      <div class="form-group">
-        <%= f.label :title, "タイトル" %>
-        <%= f.text_field :title, class: 'form-control' %>
-      </div>
-  
-      <div class="form-group">
-        <%= f.label :message, "本文" %>
-        <%= f.text_area :message, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.label :message, "本文" %>
+          <%= f.text_area :message, class: 'form-control' %>
+        </div>
       
-      <%= f.submit "送信", class: 'btn btn-primary btn-block' %>
-    <% end %>
+        <%= f.submit "送信", class: 'btn btn-primary' %>
+      <% end %>
+    </div>
   </div>
 </div>
+
