--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -1,19 +1,37 @@
 <ul class="list-unstyled">
   <% reviews.each do |review| %>
     <li class="media mb-3">
-      <img class="mr-2 rounded" src="" alt="">
+      <% if @user.user_image? %>
+        <%= image_tag @user.user_image.thumb.url, :size => "30x30" %>
+      <% else %>
+        <%= image_tag "/assets/akazukin.png", :size => "30x30" %>
+      <% end %>
       <div class="media-body">
         <div>
-          <%= link_to review.user.name, user_path(review.user) %> <span class="text-muted">投稿日時 <%= review.created_at %></span>
+          <%= link_to review.user.name, user_path(review.user) %> <span class="text-muted">投稿日時 <%= review.created_at.to_s(:datetime_jp) %></span>
         </div>
         <div>
-          <p>id:<%= review.id %> user_id:<%= review.user_id %></p>
           <p>タイトル：<%= review.title %></p>
+          <div id="star-rate-<%= review.id %>"></div>
+          
+          <script>
+          $('#star-rate-<%= review.id %>').raty({
+            size: 36,
+            starOff:  '/assets/star-off.png',
+            starOn : '/assets/star-on.png',
+            starHalf: '/assets/star-half.png',
+            half: true,
+            readOnly: true,
+            score: <%= review.review_star %>,
+          });
+          </script>  
+          
           <p class="mb-0"><%= review.content %></p>
+          <p><%= image_tag review.image.thumb100.url if review.image? %></p>
         </div>
         <div>
           <% if current_user == review.user %>
-            <%= link_to "削除", review, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-danger btn-sm' %> <%= link_to '編集', edit_review_path(review.id), class: 'btn btn-primary btn-sm' %> 
+            <%= link_to "削除", review, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-sm deletebt' %> <%= link_to '編集', edit_review_path(review.id), class: 'btn updatebt btn-sm' %> 
           <% end %>
         </div>
       </div>
