--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,7 +1,9 @@
-<div class="container">
+<div class="reviewedit container">
   <div class="text-center mt-4">
     <h1>口コミ編集する</h1>
   </div>
+  <hr>
 </div>
+
 
 <%= render "form", review: @review %>
