--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="reviewnew container">
   <div class="text-center mt-4">
     <h1>口コミ投稿する</h1>
   </div>
+  <hr>
 </div>
 
 <%= render "form", review: @review %>
