--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,5 @@
-<div id="slides" class="carousel slide" data-ride="carousel">
-  <ul class="carousel-indicators"> 
+<div id="slides" class="carousel slide" data-interval=4000 data-ride="carousel">
+  <ul class="carousel-indicators">
     <li data-target="#slides" data-slide-to="0" class="active"></li>
     <li data-target="#slides" data-slide-to="1"></li>
     <li data-target="#slides" data-slide-to="2"></li>
@@ -8,47 +8,81 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="/assets/nichinan.jpg">
-    </div>
-    <div class="carousel-item chikin">
-      <img src="/assets/chikin.jpg">
+      <div class="carousel-caption">
+        <h1 class="display-2">HINATA</h1>
+        <h2 class="display-3">MIYAZAKI</h2>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/train.jpg">
+      <img src="/assets/post.jpg">
+      <div class="carousel-caption">
+        <h1 class="display-2">HINATA</h1>
+        <h2 class="display-3">MIYAZAKI</h2>
+      </div>
     </div>
-    <div class="carousel-item sky">
-      <img src="/assets/sky.jpg">
+    <div class="carousel-item">
+      <img src="/assets/aoshima.jpg">
+      <div class="carousel-caption">
+        <h1 class="display-2">HINATA</h1>
+        <h2 class="display-3">MIYAZAKI</h2>
+      </div>
     </div>
+    <div class="carousel-item">
+      <img src="/assets/takachiho.jpg">
+      <div class="carousel-caption">
+        <h1 class="display-2">HINATA</h1>
+        <h2 class="display-3">MIYAZAKI</h2>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
 
-<% if logged_in? %>
-  <div class="mt-4 text-center">
-    <%= link_to 'Myページへ', user_path(current_user), class: 'btn btn-lg btn-primary' %>
+<div class="join container-fulid">
+  <% if logged_in? %>
+    <div class="text-center">
+      <%= link_to 'Myページへ', user_path(current_user), class: 'btn btn-lg btn-primary mybt' %>
+    </div>
+  <% else %>
+    <div class="text-center">
+      <%= link_to '新規登録', singup_path, class: 'btn btn-lg btn-primary joinbt' %>
+    </div>
+    <hr>
+    <div class="container">
+      <h2>会員登録してみらんね？</h2>
+      <ul>
+        <li>口コミを閲覧できます。みんなの情報で宮崎をもっと楽しもう！！</li>
+        <li>口コミの投稿ができます。口コミを書いて観光地を盛り上げよう！！</li>
+      </ul>
+    </div>
+    <hr>
+  <% end %>
+  <div class="banner text-center">
+    <a href="http://www.hinata-miyazaki.jp/"><img src="/assets/hinata.jpg" alt="日本のひなた宮崎県」のホームページへのリンク"></a>
+    <p>※ここ↑をクリックで「日本のひなた宮崎県」のホームページへ</p>
   </div>
-<% else %>
-  <div class="new_user mt-4 text-center">
-    <%= link_to '新規登録', singup_path, class: 'btn btn-lg btn-primary' %>
-  </div>
-  <div class="content mt-4">
-    <h2>会員登録で....</h2>
-    <ul>
-      <li>口コミを閲覧できます。みんなの情報で宮崎をもっと楽しもう！！</li>
-      <li>口コミの投稿ができます。口コミを書いて観光地を盛り上げよう！！</li>
-    </ul>
-  </div>
-<% end %>
+</div>  
 
-<div class="area container-fluid text-center">
+<div class="area container-fulid text-center">
+  <h1>エリア別観光地</h1>
+  <hr>
   <div class="row">
-    <div class="area1 col-md-4">
+    <div class="area col-xs-12 col-sm-6 col-md-4">
       <a href="#"><img src="assets/takachiho.jpg"></a>
       <p>高千穂エリア</p>
     </div>
-    <div class="area2 col-md-4">
+    <div class="area col-xs-12 col-sm-6 col-md-4">
       <a href="#"><img src="assets/moai.jpg"></a>
       <p>青島・日南エリア</p>
     </div>
-    <div class="area3 col-md-4">
+    <div class="area col-sm-12 col-md-4">
       <a href="#"><img src="assets/ikoma.jpg"></a>
       <p>えびの・都城エリア</p>
     </div>
