--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -24,10 +24,10 @@
 }
 .join2 h2 {
   font-size: 40px;
-  font-family: "Nico Moji";
+  font-family: "M PLUS Rounded 1c";
   color: #20b2aa;
 }
-.join2 li {
+.join2 p {
   font-size: 25px;
   margin-left: 30px;
 }
@@ -59,7 +59,7 @@
 
 .editbt {
   margin-left: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   background: #ffa851;
 }
 
