--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container contact">
   <div class="text-center mt-4">
     <h1>お問い合わせ</h1>
+    <p>※全ての項目で入力が必須です</p>
   </div>
 
   <div class="row form">
